# pmem

./: .editorconfig  .gitignore  Cargo.toml  Makefile.toml  alloc.rs  allocations.rs  armv8-ak-none.json  build.rs  build.sh  build.zig  deps.zig  gyro.zzz  lib.rs  license.md  psys.sh  readme.md  rustfmt.toml  rv64gc-ak-none.json  volatile.rs
.cargo/: config.toml
alloc/: layout.rs  paging.rs
allocations/: ecs.rs  global.rs  heap.rs  layout.rs  paging.rs
allocations/ecs/: result.rs
config/: rv64gc.json  thumbv8.json
src/: alloc.zig  allocations.rs  bits.rs  lib.rs  main.zig  sync.rs  unique.rs  volatile.rs
src/alloc/: Global.zig  errors.zig  layout.zig  options.zig
src/allocations/: ecs.rs  global.rs  heap.rs  paging.rs
src/allocations/ecs/: component.rs  entity.rs  result.rs  system.rs  world.rs
src/volatile/: access.rs  read.rs  write.rs
tests/vec_test/: Cargo.toml
tests/vec_test/src/: main.rs
volatile/: access.rs  error.rs  read.rs  write.rs
