[package]
name = "pmem"
version = "0.1.0"
authors = ["Yarot Kell <mechild02@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pmem"
path = "lib.rs"

[features]
default = ["allocator"]
allocator = []
mem_read = []
mem_write = []

[dependencies]
