[package]
name = "pmem"
version = "0.1.0"
authors = ["Yarot Kell <mechild02@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pmem"
path = "src/lib.rs"

[features]
default = ["allocator","sync"]
allocator = []
mem_read = []
mem_write = []
paging = []
sync = ["spin"]

[dependencies]
lazy_static = {version="1.4.0",features=["spin_no_std"]}
spin = {version="0.9.2",optional=true}
pcore = {git="https://github.com/mnimi/pcore",branch="trunk"}
ptest = {git="https://github.com/mnimi/ptest",branch="trunk"}
